--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "devops-capstone-project"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "==3.9.23"
 dependencies = [
     "pre-commit>=4.3.0",
     "ruff>=0.12.12",
@@ -15,14 +15,14 @@ dependencies = [
     "python-dotenv==0.20.0",
     "gunicorn==20.1.0",
     "honcho==1.1.0",
-    "pylint==2.14.0",
-    "flake8==4.0.1",
+    "pylint",
+    "flake8",
     "black==22.3.0",
-    "nose==1.3.7",
+    "nose",
     "pinocchio==0.4.3",
     "factory-boy==2.12.0",
     "coverage==6.3.2",
-    "httpie==3.2.1"
+    "httpie==3.2.1",
 ]
 
 [tool.nose]
